[gd_scene load_steps=15 format=3 uid="uid://bpnpy4tc088lf"]

[ext_resource type="Script" path="res://scenes/ui/menu/start_menu.gd" id="1_u6v20"]
[ext_resource type="Texture2D" uid="uid://do3tdarip7cm4" path="res://assets/sprites/ui/buttons/play/Play1.png" id="2_xiy1x"]
[ext_resource type="Texture2D" uid="uid://dl4mlx0xa7u0r" path="res://assets/sprites/ui/buttons/play/Play2.png" id="3_sh8tk"]
[ext_resource type="Texture2D" uid="uid://b3tgcdt4u3dis" path="res://assets/sprites/ui/buttons/play/Play3.png" id="4_8c4lm"]
[ext_resource type="Texture2D" uid="uid://bha5ptb2u58k4" path="res://assets/sprites/ui/buttons/editor/Editor1.png" id="5_bwt2m"]
[ext_resource type="Texture2D" uid="uid://caut6y7uj8vyn" path="res://assets/sprites/ui/buttons/editor/Editor2.png" id="6_hwjt0"]
[ext_resource type="Texture2D" uid="uid://bsg3shf3fy3fx" path="res://assets/sprites/ui/buttons/editor/Editor3.png" id="7_teh06"]
[ext_resource type="Texture2D" uid="uid://b38e28yn53fbp" path="res://assets/sprites/ui/buttons/options/Options1.png" id="8_n67pb"]
[ext_resource type="Texture2D" uid="uid://c6rkyf1g1usec" path="res://assets/sprites/ui/buttons/options/Options2.png" id="9_5vs8f"]
[ext_resource type="Texture2D" uid="uid://c16shkwrhwljg" path="res://assets/sprites/ui/buttons/options/Options3.png" id="10_fk7vk"]
[ext_resource type="Texture2D" uid="uid://eicyn55hyqp4" path="res://assets/sprites/ui/buttons/quit/Quit1.png" id="11_huyn4"]
[ext_resource type="Texture2D" uid="uid://bjxcldnwqw7ix" path="res://assets/sprites/ui/buttons/quit/Quit2.png" id="12_k8it5"]
[ext_resource type="Texture2D" uid="uid://wv7m4allyb12" path="res://assets/sprites/ui/buttons/quit/Quit3.png" id="13_8hf0i"]
[ext_resource type="PackedScene" uid="uid://vrx5ciwy8655" path="res://scenes/ui/menu/tribe_pick.tscn" id="14_jb5aa"]

[node name="StartMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_u6v20")

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="TextureButton" parent="Menu"]
layout_mode = 2
texture_normal = ExtResource("2_xiy1x")
texture_pressed = ExtResource("3_sh8tk")
texture_hover = ExtResource("4_8c4lm")

[node name="Editor" type="TextureButton" parent="Menu"]
layout_mode = 2
texture_normal = ExtResource("5_bwt2m")
texture_pressed = ExtResource("6_hwjt0")
texture_hover = ExtResource("7_teh06")

[node name="Options" type="TextureButton" parent="Menu"]
layout_mode = 2
texture_normal = ExtResource("8_n67pb")
texture_pressed = ExtResource("9_5vs8f")
texture_hover = ExtResource("10_fk7vk")

[node name="Exit" type="TextureButton" parent="Menu"]
layout_mode = 2
texture_normal = ExtResource("11_huyn4")
texture_pressed = ExtResource("12_k8it5")
texture_hover = ExtResource("13_8hf0i")

[node name="Options" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -33.0
offset_right = 26.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Video" type="Button" parent="Options/VBoxContainer"]
layout_mode = 2
text = "Video"

[node name="Audio" type="Button" parent="Options/VBoxContainer"]
layout_mode = 2
text = "Audio"

[node name="BackFromOptions" type="Button" parent="Options"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -26.5
offset_top = -31.0
offset_right = 26.5
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="Video" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Video"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.5
offset_top = -43.0
offset_right = 55.5
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2

[node name="FullScreen" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "Fullscreen"
vertical_alignment = 1

[node name="Borderless" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "Borderless"
vertical_alignment = 1

[node name="VSync" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
text = "Vsync"
vertical_alignment = 1

[node name="Checks" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2

[node name="FullScreen" type="CheckBox" parent="Video/HBoxContainer/Checks"]
layout_mode = 2
size_flags_vertical = 3

[node name="Borderless" type="CheckBox" parent="Video/HBoxContainer/Checks"]
layout_mode = 2
size_flags_vertical = 3

[node name="VSync" type="CheckBox" parent="Video/HBoxContainer/Checks"]
layout_mode = 2
size_flags_vertical = 3

[node name="BackFromVideo" type="Button" parent="Video"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -26.5
offset_top = -31.0
offset_right = 26.5
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="Audio" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -132.5
offset_top = -43.0
offset_right = 132.5
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2

[node name="Master" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
text = "Master"
vertical_alignment = 1

[node name="Music" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
text = "Music"
vertical_alignment = 1

[node name="SoundFx" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
text = "Sound Fx"
vertical_alignment = 1

[node name="Slider" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Master" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2
size_flags_vertical = 6

[node name="Music" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2
size_flags_vertical = 6

[node name="SoundFx" type="HSlider" parent="Audio/HBoxContainer/Slider"]
layout_mode = 2
size_flags_vertical = 6

[node name="BackFromAudio" type="Button" parent="Audio"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -26.5
offset_top = -31.0
offset_right = 26.5
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[node name="TribeMenu" parent="." instance=ExtResource("14_jb5aa")]
visible = false
layout_mode = 1

[connection signal="pressed" from="Menu/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Menu/Editor" to="." method="_on_editor_pressed"]
[connection signal="pressed" from="Menu/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Menu/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Options/VBoxContainer/Video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="Options/VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="Options/BackFromOptions" to="." method="_on_back_from_options_pressed"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/FullScreen" to="." method="_on_full_screen_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/Borderless" to="." method="_on_borderless_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/VSync" to="." method="_on_v_sync_toggled"]
[connection signal="pressed" from="Video/BackFromVideo" to="." method="_on_back_from_video_pressed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Slider/SoundFx" to="." method="_on_sound_fx_value_changed"]
[connection signal="pressed" from="Audio/BackFromAudio" to="." method="_on_back_from_audio_pressed"]
